# PtInvoiceAutomation

./: .gitignore  README.md
python/: invoice_parser.spec  setup.py
python/invoice_ingestor/: Dockerfile  requirements.txt  setup.py
python/invoice_ingestor/invoice_parser/: excel_manager.py  main.py
python/invoice_ingestor/invoice_parser/qr_engine/: __init__.py  qr_decoder.py
python/invoice_ingestor/invoice_parser/qr_invoice/: __init__.py  language_mapping.py  model.py  parser.py
python/invoice_parser/: main.py
python/invoice_parser/qr_invoice/: parser.py
python/src/: main.py
rust/: Cargo.toml  name_mapping.json
rust/src/: camera.rs  constants.rs  cv_worker.rs  invoice.rs  main.rs  qr_code.rs  ui.rs
rust/src/cv_pipeline/: manager.rs  mod.rs
rust/src/cv_pipeline/stages/: camera_stage.rs  display_recorder_stage.rs  egui_dispatcher_stage.rs  mod.rs  qr_detect_stage.rs  wechat_qr_detect_stage.rs
rust/src/invoice/: invoice_manager.rs  invoice_qr.rs  mod.rs
rust/src/invoice/subset_problem/: greedy_search.rs  mod.rs
